--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background: url(bg.png);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 752px;
+    min-height: 100vh;
     width: 1440px;
     position: relative;
    
@@ -23,50 +23,36 @@ body {
     justify-content: space-between;
     margin: auto;
   }
-  .input-content{
-      display: flex;
-      margin-left: 538px;  
-      width:365px;
-      height:509px;
-      margin-top:99px;
-  }
-  
-     .block-sign-up {
-     display: flex;
-     position: absolute;
-     background: linear-gradient(90deg, #BC478F 0%, #7B1FA2 100%);     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5), 0px 4px 25px rgba(0, 0, 0, 0.12);
-     border-radius: 3px;
-     width: 324px;
-     height: 150px;
-     margin-left: 20px;
-     top: 80px;
-     justify-content: center;
-  }
-
-    h3 {
-        position: absolute;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 23px;
-        color: #FFFFFF;
-        margin-top: 31px;
-       
-    }
-    .block-sign-up nav {
-    display: flex;
-    margin-top: 91px;
-    justify-content: space-between;
-    width: 130px;
-    }
-    
-
-   
-    
-
-  .form-content {
+ 
+  .sign-form {
     width: 365px;
-    height: 470px;
-    background: #FFFFFF;
-    border-radius: 3px;}
+    min-height: 470px;
+    background: #fff;
+    margin: 99px auto 0 auto;
+    border-radius: 3px;
+  }
+
+  .social-icons {
+    width: 324px;
+    height: 150px;
+    text-align:center;
+  
+    background: linear-gradient(90deg, #bc478f 0%, #7b1fa2 100%);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5), 0px 4px 25px rgba(0, 0, 0, 0.12);
+    border-radius: 3px;
+    margin: auto;
+    position: relative;
+    top: -39px;
+    padding:33px;
+    box-sizing: border-box;
+  }
+  .social-icons h1{
+   color: #FFFFFF;  
+   font-size:20px;  
+   margin:0 0 36px 0;
+
+  }
+  .social-icons a{
+    text-decoration:none;   
+    margin:0 19px ; 
+    }
