--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@ body {
     min-height: 100vh;
     width: 1440px;
     position: relative;
-   
+    font-family:  Roboto;
    }
    /*Описание HEADER ссылок на соцсети*/
-     header a {
+  header a {
        
-     text-decoration: none;
-     color: white;
-     justify-content: space-between;
-     font-family:  Roboto;
+  text-decoration: none;
+  color: white;
+  justify-content: space-between;
+ 
+  padding-right:24px;
     
   }
   
@@ -36,7 +37,7 @@ body {
     width: 324px;
     height: 150px;
     text-align:center;
-  
+
     background: linear-gradient(90deg, #bc478f 0%, #7b1fa2 100%);
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5), 0px 4px 25px rgba(0, 0, 0, 0.12);
     border-radius: 3px;
@@ -46,13 +47,96 @@ body {
     padding:33px;
     box-sizing: border-box;
   }
+
   .social-icons h1{
    color: #FFFFFF;  
    font-size:20px;  
    margin:0 0 36px 0;
-
   }
+
   .social-icons a{
     text-decoration:none;   
-    margin:0 19px ; 
+    margin:0 19px; 
+  }
+
+  h2  {
+  
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: rgba(0, 0, 0, 0.87);
+    text-align:center;
+    margin:20px 0 0 0;
     }
+
+
+   #sign-up-container {
+   display: block;
+   margin-top:33px;
+   margin-left:26px;
+ 
+     
+    }
+  #sign-up-container .input-field {
+   margin: 25px;
+ 
+}
+.input-field input {
+  width: 230px;
+  padding-bottom: 5px;
+  padding-top:8px;
+  outline: none;
+  border:none;
+  border-bottom:1px solid #D2D2D2;
+  padding-bottom: 7px;
+}
+
+.input-field img {
+  vertical-align: middle;
+  margin-right:15px;
+}
+
+.btn-get-started {
+ 
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #9C27B0;
+  border:none;
+  background-color: transparent;
+}
+
+
+.input-get-started {
+  margin-bottom: 29px;
+  margin-top:43px;
+  text-align:center;
+}
+
+
+footer {
+  margin-top: 200px;
+  margin-left: 160px;
+  width: 1139px;
+  display: flex;
+  justify-content: space-between;
+ 
+}
+
+
+  .footer-menu {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  color: #FFFFFF;
+}
+
+.footer-menu a{
+  padding-right: 34px;
+  font-size: 12px;
+  line-height: 14px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
