--- a/style.css
+++ b/style.css
@@ -3,33 +3,42 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
-    width: 1440px;
+ 
     position: relative;
     font-family:  Roboto;
+    margin:0;
    }
+
+   
+
    /*Описание HEADER ссылок на соцсети*/
   header a {
        
   text-decoration: none;
   color: white;
   justify-content: space-between;
- 
   padding-right:24px;
-    
   }
   
   header {
-    width: 1139px;
+    max-width:1139px;
     display: flex;
     justify-content: space-between;
     margin: auto;
+    padding:23px 24px;
+   
   }
+  .top-menu img{
+   vertical-align: middle;
+   padding-bottom:5px;
+   }
+ 
  
   .sign-form {
     width: 365px;
     min-height: 470px;
     background: #fff;
-    margin: 99px auto 0 auto;
+    margin: 99px auto 68px auto;
     border-radius: 3px;
   }
 
@@ -54,12 +63,9 @@ body {
    margin:0 0 36px 0;
   }
 
-  .social-icons a{
-    text-decoration:none;   
-    margin:0 19px; 
-  }
+  
 
-  h2  {
+h2  {
     font-size: 14px;
     line-height: 16px;
     color: rgba(0, 0, 0, 0.87);
@@ -68,19 +74,16 @@ body {
     }
 
 
-   #sign-up-container {
+#sign-up-container {
    display: block;
    margin-top:33px;
-   margin-left:26px;
- 
-     
     }
-  #sign-up-container .input-field {
-   margin: 25px;
+#sign-up-container .input-field {
+   margin: 25px 0 25px 25px;
  
 }
 .input-field input {
-  width: 230px;
+  width: 269px;
   padding-bottom: 5px;
   padding-top:8px;
   outline: none;
@@ -88,6 +91,10 @@ body {
   border-bottom:1px solid #D2D2D2;
   padding-bottom: 7px;
 }
+.input-field input:focus {
+  border-bottom:1px solid #9C27B0;
+}
+
 
 .input-field img {
   vertical-align: middle;
@@ -114,17 +121,17 @@ body {
 
 
 footer {
-  margin-top: 200px;
-  margin-left: 160px;
-  width: 1139px;
+  margin-top: auto;
+  max-width: 1139px;
   display: flex;
   justify-content: space-between;
- 
+  padding:23px 24px;
+   
 }
 
 
   .footer-menu {
-  font-weight: 500;
+  
   font-size: 12px;
   line-height: 14px;
   color: #FFFFFF;
@@ -136,4 +143,41 @@ footer {
   line-height: 14px;
   color: #FFFFFF;
   text-decoration: none;
+}
+
+
+@media only screen and (max-width: 786px) {
+  header {
+    background: rgba(0, 0, 0, 0.4);
+  }
+  .social-icons {
+    background: linear-gradient(90deg, #AB47BC 0%, #7B1FA2 100%);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5), 0px 4px 25px rgba(0, 0, 0, 0.12);
+    border-radius: 3px;     
+}
+body { 
+height:786px;
+}
+footer{
+  display: inline-block;
+  margin: auto;
+}
+.footer-menu {
+  padding-bottom:31px;
+ 
+}
+.made-by{
+margin-left: 50%;}
+
+@media only screen and (max-width: 400px) {
+  .input-field input {
+    width:200px;}
+
+}
+    .social-icons {
+      background: linear-gradient(90deg, #AB47BC 0%, #7B1FA2 100%);
+      box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5), 0px 4px 25px rgba(0, 0, 0, 0.12);
+      border-radius: 3px;     
+  }
+  
 }
